# DPLL

./: CMakeLists.txt  CNF.cpp  CNF.h  CNF.hpp  DPLL.cpp  DPLL.h  README.md  main.cpp
.github/workflows/: ci.yml
bench_res/: bench1.txt  bench2.txt  benchmark1.ipynb  benchmark2.ipynb
lib/: CMakeLists.txt  CNF.cpp  CNF.h  DPLL.cpp  DPLL.h  errormsg.h
test/: verify.py
test/test_input_data/: Gilgamesh.cnf  medium.cnf  medium2.cnf  propagate1.cnf  pure4.cnf  random.cnf  uf20-04.cnf
tests/: CMakeLists.txt  test.cpp  verify.py
tests/test_input_data/: big.cnf  interpretation1.cnf  propagate2.cnf  propagate3.cnf  propagate4.cnf  propagate5.cnf  pure1.cnf  pure2.cnf  pure3.cnf  pure5.cnf  small.cnf
